Closed
Bug 1376838
Opened 9 years ago
Closed 9 years ago
Enable hardware VP9 decoding on Nvidia GPUs
Categories
(Core :: Audio/Video: Playback, defect)
Tracking
()
RESOLVED
FIXED
mozilla56
People
(Reporter: cpearce, Assigned: jya)
References
Details
Attachments
(1 file)
|
59 bytes,
text/x-review-board-request
|
cpearce
:
review+
jcristau
:
approval-mozilla-beta+
|
Details |
We should enable VP9 hardware decoding on Nvidia GPUs.
| Comment hidden (mozreview-request) |
| Assignee | ||
Comment 2•9 years ago
|
||
[Tracking Requested - why for this release]: we disabled VP9 hardware decoding on nvidia GPU thinking there was an issue with those cards. But it turned out to be something else (see bug 1371290)
| Reporter | ||
Comment 3•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8881836 [details]
Bug 1376838: Revert "Bug 1360006: Whitelist VP9 decoder to intel GPU only."
https://reviewboard.mozilla.org/r/152912/#review158148
Attachment #8881836 -
Flags: review?(cpearce) → review+
Pushed by jyavenard@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/ba616afa8125
Revert "Bug 1360006: Whitelist VP9 decoder to intel GPU only." r=cpearce
| Assignee | ||
Comment 7•9 years ago
|
||
(In reply to Julien Cristau [:jcristau] from comment #5)
> Why does this need to go in 55?
Because we disabled it in 55 when it didn't have to be.
Chrome enabled this features many features ago and give them a significant advantage when it comes to watching youtube.
Flags: needinfo?(jyavenard)
Comment 8•9 years ago
|
||
| backout bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
| Assignee | ||
Comment 9•9 years ago
|
||
Comment on attachment 8881836 [details]
Bug 1376838: Revert "Bug 1360006: Whitelist VP9 decoder to intel GPU only."
Approval Request Comment
[Feature/Bug causing the regression]: 1360006
[User impact if declined]: High CPU usage on high-end machines watching YouTube
[Is this code covered by automated tests?]: no
[Has the fix been verified in Nightly?]: no
[Needs manual test from QE? If yes, steps to reproduce]: Go to youtube.com and select a 4K videos. You need a machine with a nvidia pascal gpu (10xx) or nvidia 980/nvidia 960GT (not mobile version). See that CPU usage stays below 5%.
[List of other uplifts needed for the feature/fix]: none
[Is the change risky?]: no. We've enabled this feature for intel processors already.
[Why is the change risky/not risky?]: the change has been confirmed by users that the improvement was significant
[String changes made/needed]:
Attachment #8881836 -
Flags: approval-mozilla-beta?
Comment 10•9 years ago
|
||
Just to make sure.. does this change disable media.wmf.vp9.enabled on purpose?
Flags: needinfo?(jyavenard)
| Assignee | ||
Comment 11•9 years ago
|
||
Oh good point, were supposed to enable this on beta too !
Flags: needinfo?(jyavenard)
| Assignee | ||
Comment 12•9 years ago
|
||
:jcristau, so this bug and bug 1378508 are now ready for beta uplift.
| Assignee | ||
Updated•9 years ago
|
Flags: needinfo?(jcristau)
Comment 13•9 years ago
|
||
Comment on attachment 8881836 [details]
Bug 1376838: Revert "Bug 1360006: Whitelist VP9 decoder to intel GPU only."
enable vp9 decoder on nvidia gpus, beta55+
Should be in 55.0b8 along with 1378508
Flags: needinfo?(jcristau)
Attachment #8881836 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 14•9 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•