Bug 1376838: Revert "Bug 1360006: Whitelist VP9 decoder to intel GPU only." r=cpearce a=jcristau

This reverts commit 77f2dd5563d2c3e9ad7ada388036f1846c1e2107

MozReview-Commit-ID: 71Hr05Z6hA4